<resources>
    <string name="app_name">Bazinga Chat App</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="welcome_to_bazinga_app">Welcome to Bazinga</string>
    <string name="already_have_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="your_email">Your Email</string>
    <string name="go_to_login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_bazinga_chat_app">Hi there, I\'m using Bazinga Chat App</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="default_status">Hi there! I am currently using Bazinga Chat App</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_status">Your Status</string>
</resources>
