<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="234dp"
        android:layout_height="176dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/angry_female" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_bazinga_app"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:textSize="12sp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/need_a_new_account"
        android:theme="@style/MyButton2" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:textSize="12sp"
        android:layout_below="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:text="@string/already_have_account"
        android:theme="@style/MyButton2"/>

</RelativeLayout>