<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_below="@+id/settings_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Display Name"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_below="@id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_there_i_m_using_bazinga_chat_app"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_img_btn"
        style="@style/Widget.MaterialComponents.Button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_status"
        android:layout_marginTop="50dp"
        android:textSize="12sp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/settings_status_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_img_btn"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:text="@string/change_status" />

</RelativeLayout>